--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 telegram.botName=
 telegram.token=1
 
+#Datasource
 logging.level.org.springframework.web=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,5 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=test_user
 spring.datasource.password=test_user
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
 
