Add detekt support

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ buildNumber.properties
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,maven,kotlin,java
+
+### Detekt ###
+reports/
