Добавлена таблица Bill и скрипт, вставляющие данные в таблицы management_company, house, public_service, rate

--- a/src/main/resources/db/changelog-master.yaml
+++ b/src/main/resources/db/changelog-master.yaml
@@ -1,5 +1,6 @@
 databaseChangeLog:
   - include:
-      file: changesets.sql
-
+      file: create_tables.sql
+  - include:
+      file: init_data.sql
 
