--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<kotlin.version>1.7.22</kotlin.version>
 		<telegrambots.version>6.5.0</telegrambots.version>
 		<junit.jupiter.version>5.7.2</junit.jupiter.version>
-		<mockk.version>1.12.0</mockk.version>
+		<mockk.version>1.13.4</mockk.version>
 		<jdbc.driver>org.postgresql.Driver</jdbc.driver>
 		<jdbc.url>jdbc:postgresql://localhost:5432/db</jdbc.url>
 	</properties>
@@ -60,8 +60,9 @@
 		</dependency>
 		<dependency>
 			<groupId>io.mockk</groupId>
-			<artifactId>mockk</artifactId>
+			<artifactId>mockk-jvm</artifactId>
 			<version>${mockk.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
