--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
 		<java.version>17</java.version>
 		<kotlin.version>1.7.22</kotlin.version>
 		<telegrambots.version>6.5.0</telegrambots.version>
-
+		<junit.jupiter.version>5.7.2</junit.jupiter.version>
+		<mockk.version>1.12.0</mockk.version>
 		<jdbc.driver>org.postgresql.Driver</jdbc.driver>
 		<jdbc.url>jdbc:postgresql://localhost:5432/db</jdbc.url>
 	</properties>
@@ -56,6 +57,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.mockk</groupId>
+			<artifactId>mockk</artifactId>
+			<version>${mockk.version}</version>
 		</dependency>
 	</dependencies>
 
