--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #Datasource
+telegram.bot.token=6105576274:AAEBjUYM_paN095NjTMJXyTHQtIrkwVkYgo
 logging.level.org.springframework.web=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.driver-class-name=org.postgresql.Driver
